--- a/P009123.opf/meta.yml
+++ b/P009123.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009123
+id: P009123
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W29481
   title: མན་ངག་བྱེ་བ་རིང་བསྲེལ
-  volume: ''
   author: ''
+  volumes: {}
