--- a/P009123.opf/layers/v001/Pagination.yml
+++ b/P009123.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 887f0b5d06804bc48e86db808395b238
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   94ff1e9bf4ae40f78072bbc1a069096f:
