--- a/P009123.opf/meta.yml
+++ b/P009123.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009123
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W29481
   title: མན་ངག་བྱེ་བ་རིང་བསྲེལ
